--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ title: Claudio Valerio
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   
+
   
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -25,11 +26,11 @@ github_username:  cvalerio
 
 # Build settings
 markdown: CommonMarkGhPages
-theme: minima
 plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jemoji
+  - jekyll-seo-tag
 
 destination: docs
 defaults:
